syntax = "proto3";

package c1.connector.v2;

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

enum ExternalResourceType {
  EXTERNAL_RESOURCE_TYPE_UNSPECIFIED = 0;
  EXTERNAL_RESOURCE_TYPE_USER = 1;
  EXTERNAL_RESOURCE_TYPE_GROUP = 2;
}

message ExternalResourceMatch {
  ExternalResourceType resource_type = 1; // TODO(lauren) Use enum? or resource_type_id
  string key = 2; // TODO(lauren) Use enum? email, id, name
  string value = 3;
}

message ExternalResourceMatchAll {
  ExternalResourceType resource_type = 1; // TODO(lauren) Use enum? or resource_type_id
}

message BatonID {}
